2005-10-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Updated BSD licence to 3-clause version per NetBSD.
	* Updated copyright.
	* Removed CVS IDs and inclusion of sys/cdefs.h.
	* Removed use of __P from error.h.
	* Use bsd_signal if it exists and signal does not.
	* Stop using sysexits.h in commandcmd.
	* Use stat if stat64 does not exist.
	* Added default implementation of bsearch.

2005-10-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Size optimisations in preadbuffer().

2005-10-01  Herbert Xu <herbert@gondor.apana.org.au>

	* Skip NUL characters properly in input.c.

2005-03-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed some unnecessary inclusions of input.h.
	* Removed unnecessary inclusion of main.h from eval.c.
	* Removed unnecessary inclusion of eval.h from parser.c.
	* Generalise setinputfile for use in read_profile/readcmdfile.
	* Handle SKIPEVAL in read_profile by exiting.
	* Let evaltree handle traps from cmdloop.
	* Reset evalskip after minusc is executed.
	* Stop executing traps once SKIPEVAL is seen.
	* Only handle each signal once in dotrap.

2005-03-25  Gerrit Pape <pape@smarden.org>

	* Add trailing equal sign in setvar for variables set to null.

2005-03-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Cleaned up src/Makefile.am.
	* Get rid of duplicate -g -O2 in CFLAGS.
	* Eliminate first null termination in setvar.
	* Turn evalskip into a bit field.

2005-03-25  Gilles Chanteperdrix <gilles.chanteperdrix@laposte.net>

	* Fixed support for cross-compilation.

2005-03-03  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed qflag.
	* Removed redundant setstackmark from dotcmd.
	* Do not clobber exit status in dotcmd.

2005-03-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Renamed symbols to avoid conflict with libc.
	* Optimisations in bltin/test.c.

2005-02-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Replaced EXEVAL with SKIPEVAL.
	* Update funcnest atomically.
	* Only set skipcount for break and continue.